update skills